<resources>
    <string name="app_name">Simon Says</string>
    <string name="score_label">Score: %d</string>
    <string name="login">LogIn</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="gotoreg">Go to Register</string>
    <string name="email">Introduce your email\n</string>
    <string name="iniciar_juego">Iniciar Juego</string>
    <string name="play">Play</string>
    <string name="time_15">TIME: 15</string>
    <string name="score_0">SCORE: 0</string>
    <string name="best_0">BEST: 0</string>
    <string name="score">SCORE:</string>
    <string name="time">TIME:</string>
    <string name="best">BEST:</string>
    <string name="bot_n_amarillo">Botón amarillo</string>
    <string name="bot_n_azul">Botón azul</string>
    <string name="bot_n_rojo">Botón rojo</string>
    <string name="bot_n_verde">Botón verde</string>
    <string name="ya">¡Ya!</string>
    <string name="esperando_oponente">Esperando Oponente</string>
    <string name="music_volume">Music Volume</string>
    <string name="adjust_the_music_volume">Adjust the music volume</string>
    <string name="night_mode">Night Mode</string>
    <string name="enable_or_disable_night_mode">Enable or disable night mode</string>
    <string name="settings">Settings</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="reflex_test">Reflex Test</string>
    <string name="simon_says">Simon Says!!</string>
    <string name="crear_sala">Crear Sala</string>
    <string name="unirse">Unirse</string>
    <string name="no_hay_salas_intentelo_de_nuevo_mas_tarde">No hay salas, intentelo de nuevo mas tarde</string>
    <string name="start_game">Start Game</string>
    <string name="log_in">Log In</string>
    <string name="leaderboards">LeaderBoards</string>
    <string name="select_your_preferred_language">Select your preferred language</string>
    <string name="language">Language</string>
    <string name="record">Record</string>
    <string name="guest">Guest</string>
    <string name="database_error_please_try_again">Database error. Please try again.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_username">Enter username</string>
    <string name="leaderboard_update">Leaderboard Update</string>
    <string name="someone_has_overtaken_you_in_the_leaderboard">Someone has overtaken you in the leaderboard!</string>
    <string name="open_app">Open App</string>
    <string name="dismiss">Dismiss</string>
    <string name="failed_to_load_data">Failed to load data.</string>
    <string name="your_turn">Your Turn!</string>
    <string name="pay_attention">Pay Attention!</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="error_try_again">Error! Try again.</string>
    <string name="buena_eleccion">Buena Eleccion!</string>
    <string name="debes_iniciar_sesi_n_para_jugar_el_modo_multijugador">Debes iniciar sesión para jugar el modo multijugador</string>
    <string name="select_next_color_for_your_oponent">Select Next Color for your oponent!</string>
    <string name="est_s_seguro_de_que_deseas_salir">¿Estás seguro de que deseas salir?</string>
    <string name="s">Sí</string>
    <string name="no">No</string>
    <string name="you_win_congratilations">YOU WIN!! Congratilations</string>
    <string name="you_loose">YOU LOOSE!!</string>
    <string name="failed">Failed</string>
</resources>