<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <SeekBarPreference
        android:key="music_volume"
        android:title="@string/music_volume"
        android:summary="@string/adjust_the_music_volume"
        android:max="100"
        android:defaultValue="50" />

    <SwitchPreferenceCompat
        android:key="night_mode"
        android:title="@string/night_mode"
        android:summary="@string/enable_or_disable_night_mode"
        android:defaultValue="false" />

    <ListPreference
        android:key="language_preference"
        android:title="@string/language"
        android:summary="@string/select_your_preferred_language"
        android:entries="@array/language_options"
        android:entryValues="@array/language_values"
        android:defaultValue="en" />

</PreferenceScreen>